apps/authorization-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authorization-server
  namespace: authorization
  labels:
    app.kubernetes.io/name: authorization-server
spec:
  selector:
    app.kubernetes.io/name: authorization-server
  ports:
    - name: http
      port: 8080
      targetPort: http
